连接屏幕输入与AE2兼容 / connect screen input and AE2 compatibility